[package]
name = "windows-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3.0"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
]
